# image-restoration

./: .gitignore  CMakeLists.txt  README.md  anisotropy.cpp  anisotropy.hpp  avg.cpp  colorwheel.cpp  cut.py  flowtest.cpp  grad.m  graph.cpp  graph.hpp  highest.hpp  ideas  image.cpp  image.hpp  imgdiff.cpp  main.cpp  methodnoise.cpp  neighborhood.hpp  noise.py  pertest.cpp  pixel.hpp  selectionrule.cpp  selectionrule.hpp  sobel.cpp  sobel.hpp  sparse.py
fiddle/: cvimagewidget.h  fiddle  fiddle.pro  fiddlewindow.cpp  fiddlewindow.h  fiddlewindow.ui  main.cpp  moc_cvimagewidget.cpp  moc_fiddlewindow.cpp  ui_fiddlewindow.h
figures/: Makefile
img/: lena100.pgm  lena120.pgm
