cmake_minimum_required(VERSION 2.8)
project(image-restoration)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_definitions("-Wall")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#add_executable(image-restoration main.cpp graph.cpp selectionrule.cpp image.cpp)
add_executable(avg avg.cpp)
add_executable(pertest pertest.cpp)
add_executable(imgdiff imgdiff.cpp)
add_executable(methodnoise methodnoise.cpp)
add_executable(sobel sobel.cpp graph.cpp selectionrule.cpp image.cpp anisotropy.cpp)
add_executable(colorwheel colorwheel.cpp)
add_executable(flowtest flowtest.cpp graph.cpp selectionrule.cpp)
#target_link_libraries(image-restoration ${OpenCV_LIBS})
target_link_libraries(avg ${OpenCV_LIBS})
target_link_libraries(pertest ${OpenCV_LIBS})
target_link_libraries(imgdiff ${OpenCV_LIBS})
target_link_libraries(methodnoise ${OpenCV_LIBS})
target_link_libraries(sobel ${OpenCV_LIBS})
target_link_libraries(colorwheel ${OpenCV_LIBS})
target_link_libraries(flowtest ${OpenCV_LIBS})
